--- a/od_master_detail_fx/client/src/main/resources/mainContent.fxml
+++ b/od_master_detail_fx/client/src/main/resources/mainContent.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.svenehrke.tagui.MainContentView">
+<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.group.MainContentView">
    <children>
       <SplitPane dividerPositions="0.445" layoutX="85.0" layoutY="36.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -14,9 +14,10 @@
                <children>
                   <VBox prefHeight="298.0" prefWidth="262.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <TableView fx:id="itemTable" prefHeight="298.0" prefWidth="174.0">
+                        <TableView fx:id="personTable" prefHeight="298.0" prefWidth="174.0">
                           <columns>
-                            <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Item" />
+                            <TableColumn fx:id="firstNameColumn" prefWidth="75.0" text="Firstname" />
+                              <TableColumn fx:id="lastNameColumn" prefWidth="75.0" text="Lastname" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -53,9 +54,12 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <TextField GridPane.columnIndex="1" />
-                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" />
+                              <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="birthdayTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Label text="Firstname" />
+                              <Label text="Lastname" GridPane.rowIndex="1" />
+                              <Label text="Birthday" GridPane.rowIndex="2" />
                            </children>
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
